edit service file

--- a/social_post_imgur.services.yml
+++ b/social_post_imgur.services.yml
@@ -1,4 +1,3 @@
 services:
-  imgur_post.auth_manager::
+  imgur_post.auth_manager:
     class: '\Drupal\social_post_imgur\ImgurPostAuthManager'
-    arguments: ['@session','@request_stack']
