edit static local tasks

--- a/social_post_imgur.links.task.yml
+++ b/social_post_imgur.links.task.yml
@@ -3,7 +3,7 @@ social_post_imgur.settings:
   route_name: social_post_imgur.settings_form
   base_route: social_post.integrations
 
-social_post_imgur.settings.tab:
+social_post.imgur.settings.tab:
   title: 'Settings'
   route_name: social_post_imgur.settings_form
   parent_id: social_post_imgur.settings
